<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Studentai</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Studentai</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itext-kernel</artifactId>
                <version>9.1.0</version>
                <scope>system</scope>
                <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/kernel-9.1.0.jar</systemPath>
            </dependency>

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itext-layout</artifactId>
                <version>9.1.0</version>
                <scope>system</scope>
                <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/layout-9.1.0.jar</systemPath>
            </dependency>

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itext-io</artifactId>
                <version>9.1.0</version>
                <scope>system</scope>
                <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/io-9.1.0.jar</systemPath>
            </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.3</version>
        </dependency>

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itext-commons</artifactId>
                <version>9.1.0</version>
                <scope>system</scope>
                <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/commons-9.1.0.jar</systemPath>
            </dependency>

            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itext-sign</artifactId>
                <version>9.1.0</version>
                <scope>system</scope>
                <systemPath>C:/Users/semil/Desktop/Studentai/libs/iText-Core-9.1.0-only-jars/sign-9.1.0.jar</systemPath>
            </dependency>
        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itext7-core</artifactId>
            <version>7.2.5</version>
            <scope>compile</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>org.example.studentai/org.example.studentai.HelloApplication</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>